# morph-snakes

./: CMakeLists.txt  setup.py
multisnakes/: cmorphsnakes.py  multi_snakes.py
multisnakes/src/: _morphsnakes.cpp
notebooks/: sample_lakes.ipynb
tests/: tests.cpp
